tests/paczka2/big_fuzzy/58821841.err
Error in line 6: sdRH3T56a A474 32,8
Error in line 8: sdRH3T56a S967 75,1
Error in line 13: sdRH3T56a S967 83,7
Error in line 29: qXvuw S278 29,9
Error in line 24: S278 A474 97,7
Error in line 37: S278 S291 93,4
Error in line 40: S2d8 S96d 60,2
Error in line 39: S278 S278 12,4
Error in line 43: BKXFBYb S278 53,9
Error in line 45: sdRH3T56a S278 296,1
Error in line 55: S278 S967 9,2
Error in line 63: mjQV5tU A474 38,1
Error in line 60: 2DYN S278 79,1
Error in line 76: BKXFBYb S967 21,5
Error in line 95: qXvuw S967 90,9
Error in line 82: S278 S967 72,5
Error in line 106: 2DYN A474 31,7
Error in line 111: qXvuw S278 80,8
Error in line 122: mjQV5tU A4E4 91,1
Error in line 144: BKXFBYbçS967ç53,0
Error in line 142: BKXFBYb S967 73,6
Error in line 133: sdRH3T56a A474 78,9
Error in line 158: 2xvkF S291 83,0
Error in line 155: sdRH3T56a S291 150,2
Error in line 167: 2DYN S278 75,6
Error in line 176: BKXFBYb A474 24,5
Error in line 131: mjQV5tU A474 226,8
Error in line 189: mjQV5tU A474 45,2
Error in line 192: mjQV5tU S291 95,9
Error in line 193: S278 S967 54,5
Error in line 205: mjQV5tU S278 28,4
Error in line 230: BKXFBYb S278 41,0
Error in line 226: S278 A474 83,2
Error in line 237: qXvuw S967 30,6
Error in line 238: S278 S291 1,9
Error in line 245: S278 A474 74,0
